<resources>
    <string name="app_name">2048</string>
    <string name="header">2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>

    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>
    <string name="instructions">Swipe to move. 2 + 2 = 4. Reach 2048.</string>
    <string name="you_win">You Win!</string>
    <string name="game_over">Game Over!</string>
    <string name="go_on">Tap to Continue</string>
    <string name="for_now">For now...</string>
    <string name="endless">"Endless" Mode</string>

    <string name="mode_one">单人模式</string>
    <string name="mode_two">双人蓝牙</string>
    <string name="create_room">创建房间</string>
    <string name="create_error">创建房间失败</string>
    <string name="wait_somebody">取消等待对方加入</string>
    <string name="enter_room">点击进入以下房间</string>
    <string name="enter_error">进入房间失败</string>
    <string name="load_show">正在加载</string>
    <string name="bluetooth">蓝牙不可用</string>
    <string name="exit_game_button_string">退出游戏</string>
    <string name="about_us_button_string">关于我们</string>
    <string name="tutorial_button_string">操作教程</string>
    <string name="begin_game_button_string">开始游戏</string>

</resources>
