<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/btn_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_one" />

        <Button
            android:id="@+id/btn_net"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_two" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_room"></Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_room" />

        <ListView
            android:id="@+id/lv_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#ffc6c6c6"
            android:scrollingCache="false" />
    </LinearLayout>

</LinearLayout>