<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"

    android:layout_height="fill_parent"

    android:orientation="vertical">
    <!--android:background="@drawable/back_ground" -->


    <RelativeLayout

        android:id="@+id/RelativeLayout_with_center"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <!-- 屏幕中心按钮设置 android:layout_centerInParent="true" -->

        <!--<Button-->

        <!--android:id="@+id/center_menu_button"-->

        <!--android:layout_width="200dip"-->

        <!--android:layout_height="200dip"-->

        <!--android:background="@drawable/button"-->
        <!--android:layout_marginRight="30dp"-->
        <!--android:layout_marginEnd="30dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40pt" />

        <Button

            android:id="@+id/begin_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tutorial_button"

            android:layout_alignBottom="@+id/tutorial_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/round_button"
            android:text="@string/begin_game_button_string" />

        <Button

            android:id="@+id/tutorial_button"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"

            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@+id/about_us_button"
            android:layout_toStartOf="@+id/about_us_button"
            android:background="@drawable/round_button"
            android:text="@string/tutorial_button_string" />

        <Button

            android:id="@+id/about_us_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tutorial_button"
            android:layout_alignBottom="@+id/tutorial_button"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_toLeftOf="@+id/exit_button"
            android:layout_toStartOf="@+id/exit_button"
            android:background="@drawable/round_button"
            android:text="@string/about_us_button_string" />

        <Button

            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/about_us_button"
            android:layout_alignBottom="@+id/about_us_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_button"
            android:text="@string/exit_game_button_string" />


    </RelativeLayout>
</LinearLayout>
