<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <Button
            android:id="@+id/button_single"
            android:text="S"
            app:layout_aspectRatio="100%"

            app:layout_heightPercent="10%"

            app:layout_marginLeftPercent="40%"
            app:layout_marginTopPercent="40%" />

        <Button
            android:id="@+id/button_multi"
            android:text="M"
            app:layout_aspectRatio="100%"

            app:layout_heightPercent="10%"

            app:layout_marginLeftPercent="60%"
            app:layout_marginTopPercent="40%" />

        <Button
            android:id="@+id/button_ai"
            android:text="A"
            app:layout_aspectRatio="100%"

            app:layout_heightPercent="10%"

            app:layout_marginLeftPercent="40%"
            app:layout_marginTopPercent="50%" />

        <Button
            android:id="@+id/button_custom"
            android:text="C"
            app:layout_aspectRatio="100%"

            app:layout_heightPercent="10%"

            app:layout_marginLeftPercent="60%"
            app:layout_marginTopPercent="50%" />

    </android.support.percent.PercentRelativeLayout>







        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="40pt" />

    <Button

        android:id="@+id/achievement_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tutorial_button"

        android:layout_alignBottom="@+id/tutorial_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button"
        android:text="成就统计" />

        <Button

            android:id="@+id/tutorial_button"

            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:background="@drawable/round_button"
            android:text="@string/tutorial_button_string"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/achievement_button"
            android:layout_toEndOf="@+id/achievement_button"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp" />

        <Button

            android:id="@+id/about_us_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tutorial_button"
            android:layout_alignBottom="@+id/tutorial_button"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:layout_toLeftOf="@+id/exit_button"
            android:layout_toStartOf="@+id/exit_button"
            android:background="@drawable/round_button"
            android:text="@string/about_us_button_string" />

        <Button

            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/about_us_button"
            android:layout_alignBottom="@+id/about_us_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/round_button"
            android:text="@string/exit_game_button_string" />








</RelativeLayout>